tests/cases/errors/runtime_call_nil.lox
// Calling nil is a runtime error, not a silent no-op.
// expect runtime error: Can only call functions and classes.
nil();
